# JSON_VALIDATION_APP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
configs/: input.json  schema.json
include/: config.h
lib/nlohmann_json_schema_validator/: CMakeLists.txt
src/: config.cpp  main.cpp  main.cpp.bak
